# wap

./: #Trilateration.cpp#  .gitignore  123.cpp  2.txt  222.txt  CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  Constants.cpp  Constants.h  HDEController.cpp  HDEController.h  ImagePreTreatment.cpp  ImagePreTreatment.h  ImageSet.cpp  ImageSet.h  Makefile  ProbTableElement.cpp  ProbTableElement.h  README.md  Step.cpp  Step.h  Trilateration.cpp  Trilateration.h  WordSegmentation.cpp  WordSegmentation.h  accessPoint.cpp  accessPoint.h  allowedList.txt  allowedListNew.txt  apStatus.cpp  apStatus.h  build.sh  cmake_install.cmake  init.sh  lineMessage.cpp  lineMessage.h  mapData.txt  mapTest  mapTest.cpp  (+22 more)
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  HDEController_postBuildPhase.makeRelease  ImageSet_postBuildPhase.makeDebug  ReRunCMake.make  Step_postBuildPhase.makeRelease  Trilateration_postBuildPhase.makeMinSizeRel  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  accessPoint_postBuildPhase.makeDebug  mapTest_postBuildPhase.make  mapTest_postBuildPhase.makeDebug  particlePosition_postBuildPhase.makeRelease  particle_postBuildPhase.makeRelWithDebInfo  sensorData_postBuildPhase.makeDebug  wallElement_postBuildPhase.makeMinSizeRel
Release/: compond.txt  mapData.txt  stepCount  varience.txt  varience2.txt
mapTest.xcodeproj/: project.pbxproj
map_params/: Wifi0715122921.txt  allowedList.txt  mapData copy.txt  mapData.txt  roomList.txt
params/: config  roomList copy.txt  roomList.txt
test/: StepInfo0715012806.txt  (+15 more)
(+58 files in other folders)
